src/test/deca/context/valid/sans_objet/print_nest_cont_01.deca
// Description:
//    Programme testant les print avec plusieurs expressions.
//
// Resultats:
//      22
//
// Historique:
//    cree le 04/01/2023

{
        int a = 2;
        int b = 3;
        print(a,b=2);
}